--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="open-sans-test header">
+    <header class="open-sans-test header secondary-bg" >
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -35,7 +35,28 @@
         </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I'm a designer & developer with a passion for web design. I enjoy developing simple,clean and slick websites that provide real value to the end user.Thousands of clients have procured exceptional results while working with me. delievering work within time and budget which meet clients requirements in our meta</p>
+        <div class="about-items">
+            <div class="about-item">
+                <p class="item-title">name</p>
+                <p class="item-description">Mary hardy</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">email</p>
+                <p class="item-description">abc@deg.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of birth</p>
+                <p class="item-description">December 1971</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">form</p>
+                <p class="item-description">Dhaka, BD</p>
+            </div>  
+        </div>
+        </section>
     </main>
     <footer>
 
